@@ -287,13 +287,14 @@ int main_reload_config(lua_State*)
     }
     request.respond(".. reloading configuration\n");
     SnortConfig* old = snort_conf;
-    SnortConfig* sc = reload_config();
+    SnortConfig* sc = get_reload_config();
 
     if ( !sc )
     {
         request.respond("== reload failed\n");
         return 0;
     }
+    proc_stats.conf_reloads++;
     request.respond(".. swapping configuration\n");
     swapper = new Swapper(old, sc);
 
@@ -632,7 +633,7 @@ static bool set_mode()
 
     if ( int k = get_parse_errors() )
     {
-        ParseAbort("see prior %d errors", k);
+        FatalError("see prior %d errors\n", k);
         return false;
     }
     if ( ScTestMode() ||
