@@ -50,6 +50,8 @@ public:
     static void load_commands(SnortConfig*);
     static void load_rules(SnortConfig*);
     static void set_config(SnortConfig*);
+
+    static void reset_errors();
     static unsigned get_errors();
 
     static void dump_stats(SnortConfig*);
