@@ -43,7 +43,7 @@ public:
     const StreamBuffer* reassemble(Flow* flow, unsigned total, unsigned offset, const uint8_t* data, unsigned len,
        uint32_t flags, unsigned& copied);
     bool is_paf() { return true; };
-    uint32_t max() { return paf_max; };
+    unsigned max() { return paf_max; };
 private:
     void prepare_flush(NHttpFlowData* session_data, uint32_t* flush_offset, NHttpEnums::SourceId source_id,
        NHttpEnums::SectionType section_type, bool tcp_close, uint64_t infractions, uint32_t num_octets);
@@ -52,7 +52,7 @@ private:
     NHttpInspect* const my_inspector;
 
     uint8_t *section_buffer = nullptr;
-    uint32_t paf_max = 63780;
+    unsigned paf_max = 63780;
 };
 
 #endif
