@@ -5,6 +5,10 @@
 -- misc FIXITs
 -- converted wizard to fully stateful
 -- implemented paf rescan upon auto service id
+-- changed StreamSplitter::max() from uint32_t to unsigned
+-- changed stream_tcp.paf_max to max_pdu
+-- added parse errors for module begin()/end() fails
+-- changed reload to not fatal on parse errors
 
 120
 -- tweaked --help!
